--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,7 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
