--- a/Client/package.json
+++ b/Client/package.json
@@ -3,7 +3,12 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "animate.css": "^4.1.1",
+    "atropos": "^2.0.2",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
