--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Elizabeth019/Quimica-Stands#readme",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "^2.8.0"
+    "@chakra-ui/react": "^2.8.0",
+    "sequelize": "^6.33.0"
   }
 }
