--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "quimica-stands",
-  "version": "1.0.0",
-  "description": "Quimica Stands",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Elizabeth019/Quimica-Stands.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Elizabeth019/Quimica-Stands/issues"
-  },
-  "homepage": "https://github.com/Elizabeth019/Quimica-Stands#readme",
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "^2.8.0",
-    "sequelize": "^6.33.0"
+    "cloudinary": "^1.41.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   }
 }
